[workspace]
members = [
    "health-core",
    "health-bin",
]
default-members = ["health-bin"]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = false

# Always build with: cargo auditable build --release
# This embeds dependency information for supply chain security auditing
