[package]
name = "healthcheck-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"

[dependencies]
log = "0.4"
postgres = { version = "0.19.12", default-features = false }

[dev-dependencies]
divan = "0.1"

[[bench]]
name = "tcp_check"
harness = false

[[bench]]
name = "http_check"
harness = false

[[bench]]
name = "process_check"
harness = false

[[bench]]
name = "database_check"
harness = false
